--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_i18n: ^0.7.0
   get_it: ^3.0.1
   json_annotation: ^3.0.0
+  rflutter_alert: ^1.0.3
+  flutter_svg: ^0.14.2
 
   cupertino_icons: ^0.1.2
 
