--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs-node": "1.2.11",
+    "@types/express": "^4.17.1",
     "axios": "^0.19.0",
     "canvas": "^2.6.0",
+    "express": "^4.17.1",
     "face-api.js": "^0.21.0",
+    "firebase-admin": "^8.6.1",
     "interval-promise": "^1.3.0"
   },
   "devDependencies": {
