--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "server": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "@tensorflow/tfjs-node": "1.2.11",
     "@types/express": "^4.17.1",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "canvas": "^2.6.0",
     "express": "^4.17.1",
     "face-api.js": "^0.21.0",
