--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs-node": "1.2.11",
+    "@tensorflow/tfjs-node-gpu": "1.2.11",
     "@types/express": "^4.17.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -19,9 +20,11 @@
     "express": "^4.17.1",
     "face-api.js": "^0.21.0",
     "firebase-admin": "^8.6.1",
-    "interval-promise": "^1.3.0"
+    "interval-promise": "^1.3.0",
+    "mongodb": "^3.3.3"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.3.8",
     "@types/node": "^12.7.5",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
