--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "@tensorflow/tfjs-node": "1.2.11",
     "@tensorflow/tfjs-node-gpu": "1.2.11",
     "@types/express": "^4.17.1",
+    "@types/formidable": "^1.0.31",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "canvas": "^2.6.0",
     "express": "^4.17.1",
     "face-api.js": "^0.21.0",
     "firebase-admin": "^8.6.1",
+    "formidable": "^1.2.1",
     "interval-promise": "^1.3.0",
     "mongodb": "^3.3.3"
   },
