add encoding and comparing functions

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/formidable": "^1.0.31",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bcrypt": "^3.0.7",
     "canvas": "^2.6.0",
     "express": "^4.17.1",
     "face-api.js": "^0.21.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/mongodb": "^3.3.8",
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^12.7.5",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
